- dmt example bash script which uses the docker container to run a python/dmt script.
- Generating CycloneDX SBOM from the container
- Added a RuntimeWarning when loading a parameter for a MCard which is out of bounds.
- Added a mdm-reader test case for SkywaterPDK raw measurement data
- Added an example to the docu how to read and handle the SkywaterPDK raw data in a DutLib

### Changed

- Correct Bibtex to cite for the published paper.
- format and test stages of the CI pipeline are done for reg-ex "main" (so incl. "pre-main"), the following only for "main"
- `SpecifierStr.sub_specifiers` are now `frozenset` instead of a list. This fixes the order issue and at the same time improves readability when testing.
- `SpecifierStr.__contains__` now properly testing containement without the shortcut using string casts.
- The DMT.core.Sweep attributes are now proteced by setters and getters to ensure types.

### Fixed

- CI Release name

## Deprecated

- DMT.core.naming.set_col_name deprecated as SpecifierStr creation is much better documented.

## [1.6.2] - 2022.06.14

### Fixed

- double entry in the paper bib file.

## [1.6.1] - 2022.06.14

### Fixed

- gitlab CI buildchain

## [1.6.0] - 2022.06.07

### Added

- Issue and pull request templates and better descriptions
- Added more installation help in the documentation
- ngspice now allows SGP BJTs
- use_tex parameter for Plot.plot_py() to turn off LaTeX use

### Changed

- Cleaned setup.py from unneeded dependencies and also introduces extras_require to allow the different optional installations to work properly.
- Choosing PySide2 as plot backend without setting the environment variable. The new way is not blocking other backends, if PySide2 is not installed and the variable is unset.
- Moved Smithplot and Plot2Axis to separate files.

### Fixed

- "bias_val" variable in DutHdev.get_bias_info was unset
- Some possible runtime errors fixed thanks to pylance linting.
- Hdevpy linting errors